# file

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  file.h  main.cpp
.github/workflows/: ci.yml
tests/: file_tests.cpp  test_crlf.txt
tests/test_data/: test.txt
